--- a/xmlbase.ipynb
+++ b/xmlbase.ipynb
@@ -1338,12 +1338,7 @@
     "find_component(\"./resource/test/test1\", \"android.widget.ImageView\")\n",
     "find_component(\"./resource/test/test1\", \"android.widget.FrameLayout\")\n",
     "find_component(\"./resource/test/test1\", \"android.widget.LinearLayout\")\n",
-    "find_component(\"./resource/test/test1\", \"android.widget.RelativeLayout\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "find_component(\"./resource/test/test1\", \"android.widget.RelativeLayout\")\n"
    ]
   },
   {
@@ -1392,17 +1387,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# etc. xml 내의 계층 구조별로 동일한 상위에 있는 컴포넌트만 따로 그림으로 그리기\n",
+    "import cv2\n",
+    "import re\n",
+    "import random\n",
+    "\n",
+    "def get_bounds(bounds_str):\n",
+    "    match = re.search(r'\\[(\\d+),(\\d+)\\]\\[(\\d+),(\\d+)\\]', bounds_str)\n",
+    "    x1, y1, x2, y2 = map(int, match.groups())\n",
+    "    return x1, y1, x2, y2\n",
+    "\n",
+    "def get_nodes_same_level(node, level, result):\n",
+    "    if len(result) <= level:\n",
+    "        result.append([])\n",
+    "    result[level].append(node)\n",
+    "    for child in node.findall('node'):\n",
+    "        get_nodes_same_level(child, level+1, result)\n",
+    "\n",
+    "def draw_all_nodes(nodes, image_path, file_name='output.png'):\n",
+    "    img = cv2.imread(image_path)\n",
+    "    for node in nodes:\n",
+    "        bounds = node.attrib.get('bounds')\n",
+    "        if bounds:\n",
+    "            x1, y1, x2, y2 = get_bounds(bounds)\n",
+    "            random_color = (random.randint(0, 255), random.randint(0, 255), random.randint(0, 255))\n",
+    "            cv2.rectangle(img, (x1, y1), (x2, y2), random_color, 2)\n",
+    "            cv2.putText(img, node.attrib.get('class'), (x1, y1), cv2.FONT_HERSHEY_SIMPLEX, 0.5, random_color, 2)\n",
+    "    cv2.imwrite(file_name, img)    \n",
+    "    \n",
+    "def draw_components(components, image_path, file_name='output.png'):\n",
+    "    img = cv2.imread(image_path)\n",
+    "    for component in components:\n",
+    "        random_color = (random.randint(0, 255), random.randint(0, 255), random.randint(0, 255))\n",
+    "        cv2.rectangle(img, (component[0], component[1]), (component[2], component[3]), random_color, 2)\n",
+    "    cv2.imwrite(file_name, img)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def is_contained(inner, outer):\n",
+    "    return outer[0] <= inner[0] and outer[1] <= inner[1] and outer[2] >= inner[2] and outer[3] >= inner[3]\n",
+    "\n",
+    "def filter_components(components):\n",
+    "    valid_components = []\n",
+    "    for i, comp in enumerate(components):\n",
+    "        contained = False\n",
+    "        for j, comp_b in enumerate(components):\n",
+    "            if i != j and is_contained(comp, comp_b):\n",
+    "                contained = True\n",
+    "                break\n",
+    "        if not contained:\n",
+    "            valid_components.append(comp)\n",
+    "    return valid_components\n",
+    "\n",
+    "\n",
+    "def get_valid_components(nodes):\n",
+    "    components = [get_bounds(node.get('bounds')) for node in nodes]\n",
+    "    valid_components = []\n",
+    "    if len(components) == 1:\n",
+    "        return None\n",
+    "    else:\n",
+    "        for component in components:\n",
+    "            if abs(component[0]-component[2]) < 1812 * 0.5 and abs(component[1]-component[3]) < 2176 * 0.5:\n",
+    "                valid_components.append(component)\n",
+    "\n",
+    "    valid_components = filter_components(valid_components)\n",
+    "    return valid_components\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_centered(line):\n",
+    "    centers = [ ((x1 + x2) // 2) for (x1, y1, x2, y2) in line]\n",
+    "    gaps = [centers[i+1] - centers[i] for i in range(len(centers)-1)]\n",
+    "    return all(gap == gaps[0] for gap in gaps)\n",
+    "\n",
+    "def is_left(line):\n",
+    "    lefts = [x1 for (x1, y1, x2, y2) in line]\n",
+    "    gaps = [lefts[i+1] - lefts[i] for i in range(len(lefts)-1)]\n",
+    "    return all(gap == gaps[0] for gap in gaps)\n",
+    "\n",
+    "def is_right(line):\n",
+    "    rights = [x2 for (x1, y1, x2, y2) in line]\n",
+    "    gaps = [rights[i+1] - rights[i] for i in range(len(rights)-1)]\n",
+    "    return all(gap == gaps[0] for gap in gaps)\n",
+    "\n",
+    "def get_grid(components):\n",
+    "    grid = []\n",
+    "    lines = {}\n",
+    "    for component in components:\n",
+    "        horizontal = [component[1], component[3]]\n",
+    "        if horizontal in grid:\n",
+    "            index = grid.index(horizontal)\n",
+    "            lines[index].append(component)\n",
+    "        else:\n",
+    "            grid.append(horizontal)\n",
+    "            lines[len(grid)-1] = [component]\n",
+    "\n",
+    "    for i in range(len(lines)):\n",
+    "        line = lines[i]\n",
+    "        if line[i] is None or len(line) <= 2:\n",
+    "            return True\n",
+    "        elif is_centered(line) or is_left(line) or is_right(line):\n",
+    "            return True\n",
+    "        else:\n",
+    "            print(i)\n",
+    "            return False\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "Components are not aligned\n"
+     ]
+    }
+   ],
+   "source": [
+    "import xml.etree.ElementTree as ET\n",
+    "\n",
+    "image_path = './resource/test/fail2.png'\n",
+    "tree = ET.parse('./resource/test/fail2.xml')\n",
+    "root = tree.getroot().find('node')\n",
+    "\n",
+    "levels = []\n",
+    "get_nodes_same_level(root, 0, levels)\n",
+    "\n",
+    "all_alligned = True\n",
+    "\n",
+    "for i, nodes in enumerate(levels):\n",
+    "    result = get_valid_components(nodes)\n",
+    "    if result is not None and len(result) > 0:\n",
+    "        grid = get_grid(result)\n",
+    "        if grid is False:\n",
+    "            all_alligned = False\n",
+    "            draw_components(result, image_path)\n",
+    "            break\n",
+    "\n",
+    "if all_alligned:\n",
+    "    print(\"All components are aligned\")\n",
+    "else:\n",
+    "    print(\"Components are not aligned\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
